The .item__price hover is almost fixed the only thing left is to find how add three point on paragraph when the <p> is too long

--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -195,6 +195,18 @@ a:visited
 
     }
 
+    .item__price
+    {
+        // Temporary rules
+        transition: padding-right 700ms ease-out;
+    }
+
+    .item:hover > .item__price
+    {
+        // Temporary rules
+        padding-right: 6em;        
+    }
+
     /* END GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
 
 
